# zhipin-agent

./: .env.example  .gitignore  PROJECT_GUIDE.md  README.md  desktop_app.py  fastapi_app.py  pyproject.toml  requirements.txt  run_demo.py  web_app.py
data/: sample_job.txt
data/resumes/: alice_chen.txt  bo_li.txt  cindy_wang.txt
packaging/windows/: README.md  build_exe.ps1  build_installer.ps1  install_app.ps1  installer_payload.ps1  installer_setup.cmd  uninstall_app.ps1  zhipin_installer.py
src/recruitment_agents/: __init__.py  agents.py  checkpointing.py  cli.py  llm.py  models.py  parsers.py  scoring.py  workflow.py
src/recruitment_agents/tools/: __init__.py  calendar.py  email.py  inbox.py
static/: app.js  index.html  styles.css
tests/: test_fastapi_app.py  test_inbox.py  test_workflow.py
