[project]
name = "ai-recruitment-agent"
version = "0.1.0"
description = "Multi-agent recruiting and resume mining workflow built with LangChain and LangGraph."
requires-python = ">=3.11"
dependencies = [
  "langgraph>=1.0.0",
  "langgraph-checkpoint-sqlite>=3.0.0",
  "langchain>=1.0.0",
  "langchain-openai>=1.0.0",
  "fastapi>=0.115.0",
  "uvicorn>=0.30.0",
  "python-multipart>=0.0.9",
  "pydantic>=2.7.0",
  "python-dotenv>=1.0.1",
  "pypdf>=4.2.0",
  "python-docx>=1.1.2",
  "pillow>=10.3.0",
  "pytesseract>=0.3.10",
  "google-api-python-client>=2.130.0",
  "google-auth-httplib2>=0.2.0",
  "google-auth-oauthlib>=1.2.0",
  "tzdata>=2024.1",
]

[project.scripts]
recruitment-demo = "recruitment_agents.cli:main"
recruitment-web = "fastapi_app:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
